[gd_scene load_steps=4 format=3 uid="uid://dbxk1bvl7g6jj"]

[ext_resource type="Script" path="res://building/building.gd" id="1_gd40g"]
[ext_resource type="Texture2D" uid="uid://b6e3gc04bkbb5" path="res://assets/buildings/floors.png" id="1_tdk1x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv0ql"]

[node name="Building" type="Node2D"]
script = ExtResource("1_gd40g")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(3, 3)

[node name="Sprite2D5" type="Sprite2D" parent="Area2D"]
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("1_tdk1x")
region_enabled = true
region_rect = Rect2(32, 1760, 32, 32)
region_filter_clip_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_dv0ql")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
